syntax = "proto3";

package ultpb;

// enumerable asset types
enum AssetType {
  NATIVE = 0;
  CUSTOM = 1;
}

message Asset {
  AssetType AssetType = 1;
  // user defined asset name, name length should not be more than 4
  string AssetName = 2;
  // issuer of this asset
  string Issuer = 3;
}
